Fix alignment issues

--- a/src/components/HeaderDashboard/HeaderDashboard.scss
+++ b/src/components/HeaderDashboard/HeaderDashboard.scss
@@ -128,8 +128,8 @@
   position: fixed;
   display: flex;
   flex-direction: column;
-  top:-17px;
-  right: 8px;
+  top:-14px;
+  right:26px;
 
   button {   
     margin-top: 25%;
